{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 39,
  "lineage": "d6108177-9dcb-278f-86db-549614310963",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "fgt_external_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "172.16.48.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2020-02-23T11:48:01.394-08:00",
            "id": "projects/infra-lodge-268907/regions/europe-west1/addresses/jvh01-fgt-external-ip",
            "name": "jvh01-fgt-external-ip",
            "network_tier": "PREMIUM",
            "project": "infra-lodge-268907",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/addresses/jvh01-fgt-external-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/subnetworks/jvh01-subnet-external"
          },
          "dependencies": [
            "google_compute_network.vpc-external",
            "google_compute_subnetwork.subnet-external"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "fgt_internal_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "172.16.48.130",
            "address_type": "INTERNAL",
            "creation_timestamp": "2020-02-23T11:48:11.559-08:00",
            "id": "projects/infra-lodge-268907/regions/europe-west1/addresses/jvh01-fgt-internal-ip",
            "name": "jvh01-fgt-internal-ip",
            "network_tier": "PREMIUM",
            "project": "infra-lodge-268907",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/addresses/jvh01-fgt-internal-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/subnetworks/jvh01-subnet-internal"
          },
          "dependencies": [
            "google_compute_network.vpc-internal",
            "google_compute_subnetwork.subnet-internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "fgt_public_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.240.82.190",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-02-23T11:47:27.860-08:00",
            "id": "projects/infra-lodge-268907/regions/europe-west1/addresses/jvh01-fgt-public-ip",
            "name": "jvh01-fgt-public-ip",
            "network_tier": "PREMIUM",
            "project": "infra-lodge-268907",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/addresses/jvh01-fgt-public-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-inbound-allow-ports",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22",
                  "443",
                  "8443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-23T11:47:44.294-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-lodge-268907/global/firewalls/fw-inbound-allow-ports",
            "name": "fw-inbound-allow-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-external",
            "priority": 1000,
            "project": "infra-lodge-268907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/firewalls/fw-inbound-allow-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc-external"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-outbound-allow-all",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-02-23T11:47:44.402-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/infra-lodge-268907/global/firewalls/fw-outbound-allow-all",
            "name": "fw-outbound-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-internal",
            "priority": 1000,
            "project": "infra-lodge-268907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/firewalls/fw-outbound-allow-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc-internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "fgt",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/images/fgt-v6-build1066",
                    "size": 2,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/zones/europe-west1-b/disks/jvh01-fgt"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-lodge-268907/zones/europe-west1-b/instances/jvh01-fgt",
            "instance_id": "8611556490324437008",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "49oahtsjpF0=",
            "name": "jvh01-fgt",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.82.190",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-external",
                "network_ip": "172.16.48.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/subnetworks/jvh01-subnet-external",
                "subnetwork_project": "infra-lodge-268907"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-internal",
                "network_ip": "172.16.48.130",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/subnetworks/jvh01-subnet-internal",
                "subnetwork_project": "infra-lodge-268907"
              }
            ],
            "project": "infra-lodge-268907",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/zones/europe-west1-b/instances/jvh01-fgt",
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_address.fgt_external_ip",
            "google_compute_address.fgt_internal_ip",
            "google_compute_address.fgt_public_ip",
            "google_compute_network.vpc-external",
            "google_compute_network.vpc-internal",
            "google_compute_subnetwork.subnet-external",
            "google_compute_subnetwork.subnet-internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-external",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/infra-lodge-268907/global/networks/jvh01-vpc-external",
            "name": "jvh01-vpc-external",
            "project": "infra-lodge-268907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-external"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/infra-lodge-268907/global/networks/jvh01-vpc-internal",
            "name": "jvh01-vpc-internal",
            "project": "infra-lodge-268907",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-internal"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/infra-lodge-268907/global/routes/internal-route",
            "name": "internal-route",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-internal",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "projects/infra-lodge-268907/zones/europe-west1-b/instances/jvh01-fgt",
            "next_hop_instance_zone": "europe-west1-b",
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "infra-lodge-268907",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/routes/internal-route",
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_address.fgt_external_ip",
            "google_compute_address.fgt_internal_ip",
            "google_compute_address.fgt_public_ip",
            "google_compute_instance.fgt",
            "google_compute_network.vpc-external",
            "google_compute_network.vpc-internal",
            "google_compute_subnetwork.subnet-external",
            "google_compute_subnetwork.subnet-internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-external",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-23T11:47:44.455-08:00",
            "gateway_address": "172.16.48.1",
            "id": "projects/infra-lodge-268907/regions/europe-west1/subnetworks/jvh01-subnet-external",
            "ip_cidr_range": "172.16.48.0/27",
            "name": "jvh01-subnet-external",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-external",
            "private_ip_google_access": false,
            "project": "infra-lodge-268907",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/subnetworks/jvh01-subnet-external"
          },
          "dependencies": [
            "google_compute_network.vpc-external"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-02-23T11:47:44.424-08:00",
            "gateway_address": "172.16.48.129",
            "id": "projects/infra-lodge-268907/regions/europe-west1/subnetworks/jvh01-subnet-internal",
            "ip_cidr_range": "172.16.48.128/27",
            "name": "jvh01-subnet-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/global/networks/jvh01-vpc-internal",
            "private_ip_google_access": false,
            "project": "infra-lodge-268907",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-lodge-268907/regions/europe-west1/subnetworks/jvh01-subnet-internal"
          },
          "dependencies": [
            "google_compute_network.vpc-internal"
          ]
        }
      ]
    }
  ]
}